<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.browser.BrowserYesNoPreference android:title="@string/pref_privacy_clear_cache" android:key="privacy_clear_cache" android:summary="@string/pref_privacy_clear_cache_summary" android:dialogTitle="@string/clear" android:dialogMessage="@string/pref_privacy_clear_cache_dlg" android:dialogIcon="@*android:drawable/ic_dialog_alert" />
    <com.android.browser.BrowserYesNoPreference android:title="@string/pref_privacy_clear_history" android:key="privacy_clear_history" android:summary="@string/pref_privacy_clear_history_summary" android:dialogTitle="@string/clear" android:dialogMessage="@string/pref_privacy_clear_history_dlg" android:dialogIcon="@*android:drawable/ic_dialog_alert" />
    <CheckBoxPreference android:title="@string/pref_security_show_security_warning" android:key="show_security_warnings" android:summary="@string/pref_security_show_security_warning_summary" android:defaultValue="true" />
    <PreferenceCategory android:title="@string/pref_privacy_cookies_title">
        <CheckBoxPreference android:title="@string/pref_security_accept_cookies" android:key="accept_cookies" android:summary="@string/pref_security_accept_cookies_summary" android:defaultValue="true" />
        <com.android.browser.BrowserYesNoPreference android:title="@string/pref_privacy_clear_cookies" android:key="privacy_clear_cookies" android:summary="@string/pref_privacy_clear_cookies_summary" android:dialogTitle="@string/clear" android:dialogMessage="@string/pref_privacy_clear_cookies_dlg" android:dialogIcon="@*android:drawable/ic_dialog_alert" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_privacy_formdata_title">
        <CheckBoxPreference android:title="@string/pref_security_save_form_data" android:key="save_formdata" android:summary="@string/pref_security_save_form_data_summary" android:defaultValue="true" />
        <com.android.browser.BrowserYesNoPreference android:title="@string/pref_privacy_clear_form_data" android:key="privacy_clear_form_data" android:summary="@string/pref_privacy_clear_form_data_summary" android:dialogTitle="@string/clear" android:dialogMessage="@string/pref_privacy_clear_form_data_dlg" android:dialogIcon="@*android:drawable/ic_dialog_alert" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_privacy_location_title">
        <CheckBoxPreference android:title="@string/pref_privacy_enable_geolocation" android:key="enable_geolocation" android:summary="@string/pref_privacy_enable_geolocation_summary" android:defaultValue="true" />
        <com.android.browser.BrowserYesNoPreference android:title="@string/pref_privacy_clear_geolocation_access" android:key="privacy_clear_geolocation_access" android:summary="@string/pref_privacy_clear_geolocation_access_summary" android:dependency="enable_geolocation" android:dialogTitle="@string/clear" android:dialogMessage="@string/pref_privacy_clear_geolocation_access_dlg" android:dialogIcon="@*android:drawable/ic_dialog_alert" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_security_passwords_title">
        <CheckBoxPreference android:title="@string/pref_security_remember_passwords" android:key="remember_passwords" android:summary="@string/pref_security_remember_passwords_summary" android:defaultValue="true" />
        <com.android.browser.BrowserYesNoPreference android:title="@string/pref_privacy_clear_passwords" android:key="privacy_clear_passwords" android:summary="@string/pref_privacy_clear_passwords_summary" android:dialogTitle="@string/clear" android:dialogMessage="@string/pref_privacy_clear_passwords_dlg" android:dialogIcon="@*android:drawable/ic_dialog_alert" />
    </PreferenceCategory>
</PreferenceScreen>