<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.browser.search.SearchEnginePreference android:title="@string/pref_content_search_engine" android:key="search_engine" android:summary="@string/pref_content_search_engine_summary" android:defaultValue="google" android:dialogTitle="@string/pref_content_search_engine" />
    <CheckBoxPreference android:title="@string/pref_content_open_in_background" android:key="open_in_background" android:summary="@string/pref_content_open_in_background_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/pref_content_javascript" android:key="enable_javascript" android:defaultValue="true" />
    <ListPreference android:entries="@array/pref_content_plugins_choices" android:title="@string/pref_content_plugins" android:key="plugin_state" android:defaultValue="ON" android:dialogTitle="@string/pref_content_plugins" android:entryValues="@array/pref_content_plugins_values" />
    <PreferenceScreen android:title="@string/pref_extras_website_settings" android:key="website_settings" android:summary="@string/pref_extras_website_settings_summary" />
    <PreferenceCategory android:title="@string/pref_content_title">
        <ListPreference android:entries="@array/pref_default_zoom_choices" android:title="@string/pref_default_zoom" android:key="default_zoom" android:defaultValue="MEDIUM" android:dialogTitle="@string/pref_default_zoom_dialogtitle" android:entryValues="@array/pref_default_zoom_values" />
        <CheckBoxPreference android:title="@string/pref_content_load_page" android:key="load_page" android:summary="@string/pref_content_load_page_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_content_autofit" android:key="autofit_pages" android:summary="@string/pref_content_autofit_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_content_block_popups" android:key="block_popup_windows" android:defaultValue="true" />
        <ListPreference android:entries="@array/pref_default_text_encoding_choices" android:title="@string/pref_default_text_encoding" android:key="default_text_encoding" android:defaultValue="@string/pref_default_text_encoding_default" android:dialogTitle="@string/pref_default_text_encoding_dialogtitle" android:entryValues="@array/pref_default_text_encoding_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_extras_reset_default_title">
        <com.android.browser.BrowserYesNoPreference android:title="@string/pref_extras_reset_default" android:key="reset_default_preferences" android:summary="@string/pref_extras_reset_default_summary" android:dialogTitle="@string/pref_extras_reset_default_dlg_title" android:dialogMessage="@string/pref_extras_reset_default_dlg" android:dialogIcon="@*android:drawable/ic_dialog_alert" />
    </PreferenceCategory>
</PreferenceScreen>