<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/PHONE_MENU">
        <item android:id="@id/dial_context_menu_id" android:title="@string/contextmenu_dial_dot" />
        <item android:id="@id/add_contact_context_menu_id" android:title="@string/contextmenu_add_contact" />
        <item android:id="@id/copy_phone_context_menu_id" android:title="@string/contextmenu_copy" />
    </group>
    <group android:id="@id/EMAIL_MENU">
        <item android:id="@id/email_context_menu_id" android:title="@string/contextmenu_send_mail" />
        <item android:id="@id/copy_mail_context_menu_id" android:title="@string/contextmenu_copy" />
    </group>
    <group android:id="@id/GEO_MENU">
        <item android:id="@id/map_context_menu_id" android:title="@string/contextmenu_map" />
        <item android:id="@id/copy_geo_context_menu_id" android:title="@string/contextmenu_copy" />
    </group>
    <group android:id="@id/ANCHOR_MENU">
        <item android:id="@id/open_context_menu_id" android:title="@string/contextmenu_openlink" />
        <item android:id="@id/open_newtab_context_menu_id" android:title="@string/contextmenu_openlink_newwindow" />
        <item android:id="@id/save_link_context_menu_id" android:title="@string/contextmenu_savelink" />
        <item android:id="@id/copy_link_context_menu_id" android:title="@string/contextmenu_copylink" />
    </group>
    <group android:id="@id/IMAGE_MENU">
        <item android:id="@id/download_context_menu_id" android:title="@string/contextmenu_download_image" />
        <item android:id="@id/view_image_context_menu_id" android:title="@string/contextmenu_view_image" />
        <item android:id="@id/set_wallpaper_context_menu_id" android:title="@string/contextmenu_set_wallpaper" />
    </group>
    <group android:id="@id/SELECT_TEXT_MENU">
        <item android:id="@id/select_text_menu_id" android:title="@string/select_dot" />
    </group>
</menu>