<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/CONTEXT_MENU">
        <item android:id="@id/open_context_menu_id" android:title="@string/contextmenu_openlink" />
        <item android:id="@id/new_window_context_menu_id" android:title="@string/contextmenu_openlink_newwindow" />
        <item android:id="@id/save_to_bookmarks_menu_id" android:title="@string/save_to_bookmarks" />
        <item android:id="@id/share_link_context_menu_id" android:title="@string/contextmenu_sharelink" />
        <item android:id="@id/copy_url_context_menu_id" android:title="@string/contextmenu_copylink" />
        <item android:id="@id/delete_context_menu_id" android:title="@string/remove_history_item" />
        <item android:id="@id/homepage_context_menu_id" android:title="@string/set_as_homepage" />
    </group>
</menu>