<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:title="@string/pref_general_title" android:fragment="com.android.browser.preferences.GeneralPreferencesFragment" />
    <header android:title="@string/pref_privacy_security_title" android:fragment="com.android.browser.preferences.PrivacySecurityPreferencesFragment" />
    <header android:title="@string/pref_accessibility_title" android:fragment="com.android.browser.preferences.AccessibilityPreferencesFragment" />
    <header android:title="@string/pref_extras_title" android:fragment="com.android.browser.preferences.AdvancedPreferencesFragment" />
    <header android:title="@string/pref_data_title" android:fragment="com.android.browser.preferences.BandwidthPreferencesFragment" />
    <header android:title="@string/pref_lab_title" android:fragment="com.android.browser.preferences.LabPreferencesFragment" />
</preference-headers>