<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/MAIN_MENU">
        <group android:id="@id/NAV_MENU" android:visible="@bool/menu_show_navigation">
            <item android:id="@id/stop_reload_menu_id" android:alphabeticShortcut="r" />
            <item android:icon="@*android:drawable/ic_menu_goto" android:id="@id/forward_menu_id" android:title="@string/forward" />
        </group>
        <item android:icon="@drawable/ic_new_window_holo_dark" android:id="@id/new_tab_menu_id" android:title="@string/new_tab" android:alphabeticShortcut="n" android:showAsAction="never" />
        <item android:icon="@drawable/ic_new_incognito_holo_dark" android:id="@id/incognito_menu_id" android:title="@string/new_incognito_tab" />
        <item android:icon="@drawable/ic_bookmark_on_holo_dark" android:id="@id/add_bookmark_menu_id" android:visible="@bool/menu_show_bookmarks" android:title="@string/save_to_bookmarks" android:alphabeticShortcut="d" />
        <group android:id="@id/LIVE_MENU">
            <item android:icon="@drawable/ic_share_holo_dark" android:id="@id/share_page_menu_id" android:title="@string/share_page" android:alphabeticShortcut="s" />
            <item android:id="@id/find_menu_id" android:title="@*android:string/back_button_label" />
            <item android:id="@id/ua_desktop_menu_id" android:title="@string/ua_switcher_desktop" android:checkable="true" />
            <item android:id="@id/save_snapshot_menu_id" android:title="@string/menu_save_snapshot" />
        </group>
        <group android:id="@id/SNAPSHOT_MENU">
            <item android:id="@id/snapshot_go_live" android:title="@string/snapshot_go_live" />
        </group>
        <group android:id="@id/COMBO_MENU">
            <item android:id="@id/history_menu_id" android:title="@string/tab_history" android:alphabeticShortcut="h" />
            <item android:id="@id/snapshots_menu_id" android:title="@string/tab_snapshots" />
        </group>
        <item android:id="@id/page_info_menu_id" android:title="@string/page_info" />
        <item android:icon="@drawable/ic_settings_holo_dark" android:id="@id/preferences_menu_id" android:title="@string/menu_preferences" android:alphabeticShortcut="p" />
        <item android:id="@id/dump_nav_menu_id" android:visible="false" android:title="@string/dump_nav" />
        <item android:id="@id/dump_counters_menu_id" android:visible="false" android:title="@string/dump_counters" />
    </group>
    <group android:id="@id/MAIN_SHORTCUT_MENU" android:visible="false">
        <item android:id="@id/view_downloads_menu_id" android:alphabeticShortcut="j" />
        <item android:id="@id/homepage_menu_id" android:alphabeticShortcut=" " />
        <item android:id="@id/zoom_in_menu_id" android:alphabeticShortcut="i" />
        <item android:id="@id/zoom_out_menu_id" android:alphabeticShortcut="o" />
        <item android:id="@id/window_one_menu_id" android:alphabeticShortcut="1" />
        <item android:id="@id/window_two_menu_id" android:alphabeticShortcut="2" />
        <item android:id="@id/window_three_menu_id" android:alphabeticShortcut="3" />
        <item android:id="@id/window_four_menu_id" android:alphabeticShortcut="4" />
        <item android:id="@id/window_five_menu_id" android:alphabeticShortcut="5" />
        <item android:id="@id/window_six_menu_id" android:alphabeticShortcut="6" />
        <item android:id="@id/window_seven_menu_id" android:alphabeticShortcut="7" />
        <item android:id="@id/window_eight_menu_id" android:alphabeticShortcut="8" />
        <item android:id="@id/back_menu_id" />
        <item android:id="@id/goto_menu_id" android:alphabeticShortcut="l" />
        <item android:id="@id/close_menu_id" android:alphabeticShortcut="w" />
        <item android:id="@id/find_menu_id" android:alphabeticShortcut="f" />
        <item android:id="@id/page_info_menu_id" android:alphabeticShortcut="g" />
        <item android:id="@id/bookmarks_menu_id" android:alphabeticShortcut="b" />
    </group>
    <item android:icon="@*android:drawable/ic_popup_sync_1" android:id="@id/stop_menu_id" android:visible="false" android:title="@string/stop" />
    <item android:icon="@*android:drawable/ic_menu_search_holo_light" android:id="@id/reload_menu_id" android:visible="false" android:title="@string/reload" />
</menu>